@@ -931,6 +931,7 @@ answer_authoritative(struct nsd   *nsd,
 			const dname_type* newname = dname_replace(q->region, name, 
 				domain_dname(src), domain_dname(dest));
 			uint32_t newnum = 0;
+			++q->cname_count;
 			if(!newname) { /* newname too long */
 				RCODE_SET(q->packet, RCODE_YXDOMAIN);
 				return;
@@ -1047,7 +1048,8 @@ answer_lookup_zone(struct nsd *nsd, struct query *q, answer_type *answer,
 {	
 	q->zone = domain_find_zone(closest_encloser);
 	if (!q->zone) {
-		RCODE_SET(q->packet, RCODE_SERVFAIL);
+		if(q->cname_count == 0)
+			RCODE_SET(q->packet, RCODE_SERVFAIL);
 		return;
 	}
 
@@ -1069,7 +1071,8 @@ answer_lookup_zone(struct nsd *nsd, struct query *q, answer_type *answer,
 	/* see if the zone has expired (for secondary zones) */
 	if(q->zone && q->zone->opts && zone_is_slave(q->zone->opts)
 		&& !q->zone->is_ok) {
-		RCODE_SET(q->packet, RCODE_SERVFAIL);
+		if(q->cname_count == 0)
+			RCODE_SET(q->packet, RCODE_SERVFAIL);
 		return;
 	}
 
